<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:background="@color/pale_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="UselessParent">

        <LinearLayout
            android:background="@drawable/search_box_background"
            android:paddingStart="15dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@null"
                android:layout_marginEnd="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_search_24"/>

            <EditText
                android:textColorHint="@color/grey"
                android:inputType="textCapSentences"
                android:autofillHints="none"
                android:layout_width="0dp"
                android:paddingTop="5dp"
                android:textSize="17.5sp"
                android:imeOptions="actionSearch"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/search"
                tools:ignore="NestedWeights" />

            <ImageView
                android:focusable="true"
                android:tooltipText="@string/scan_product"
                android:clickable="true"
                android:background="@drawable/qr_button_background"
                android:contentDescription="@null"
                android:layout_marginStart="10dp"
                android:padding="7dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_qr_code_scanner_24"
                tools:targetApi="o" />

        </LinearLayout>

        <ImageView
            android:focusable="true"
            android:clickable="true"
            android:tooltipText="@string/voice_search"
            android:background="@drawable/mic_icon_background"
            android:padding="7dp"
            android:contentDescription="@null"
            android:layout_marginStart="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_mic_24"
            tools:targetApi="o" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:indeterminateTint="@color/pink"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>

    <LinearLayout
        android:id="@+id/DeliverLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10sp"
        android:background="@color/pang">

        <ImageView
            android:contentDescription="@null"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_location_on_24"/>

        <TextView
            android:textColor="@color/dark_grey1"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliver_text"/>

        <ImageView
            android:contentDescription="@null"
            android:layout_marginStart="5dp"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>

    </LinearLayout>

    <HorizontalScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:focusable="true"
                android:clickable="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/options_background"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/prime"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prime"/>

            </LinearLayout>

            <LinearLayout
                android:focusable="true"
                android:clickable="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/options_background"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/mobile"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobiles"/>

            </LinearLayout>

            <LinearLayout
                android:focusable="true"
                android:clickable="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/options_background"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/electronics"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electronics"/>

            </LinearLayout>

            <LinearLayout
                android:focusable="true"
                android:clickable="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/options_background"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/fashion"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fashion"/>

            </LinearLayout>

            <LinearLayout
                android:focusable="true"
                android:clickable="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/options_background"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/minitv"/>

                <TextView
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minitv"/>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_centerInParent="true"
            android:background="@color/lightest_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/banner"
                android:focusable="true"
                android:clickable="true"
                android:scaleType="fitStart"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:focusable="true"
            android:clickable="true"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/alexa_icon_background">

            <ImageView
                android:contentDescription="@null"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_mark_chat_unread_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alexa"
                android:textColor="@color/dark_grey"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2.5dp"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/Home"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/HomeBar"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/solid_background"/>

            <ImageView
                android:id="@+id/HomeIcon"
                android:contentDescription="@null"
                android:layout_marginBottom="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_home_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Person"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/PersonBar"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/solid_background_disable"/>

            <ImageView
                android:id="@+id/PersonIcon"
                android:contentDescription="@null"
                android:layout_marginBottom="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_person_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Cart"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/CartBar"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/solid_background_disable"/>

            <ImageView
                android:id="@+id/CartIcon"
                android:contentDescription="@null"
                android:layout_marginBottom="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_shopping_cart_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Menu"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/MenuBar"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/solid_background_disable"/>

            <ImageView
                android:id="@+id/MenuIcon"
                android:contentDescription="@null"
                android:layout_marginBottom="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_menu_24"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>